# raytracer

./: .gitignore  CMakeLists.txt  README.md  makefile
scenes/: direct-dragon.test  dragon.test  scene2.test  scene3.test  scene4-ambient.test  scene4-emission.test  scene4-specular.test  scene5.test  scene6.test  scene7.test  scene8.test
src/: box.hpp  bvh.hpp  camera.hpp  fragment.hpp  frame.hpp  hit.hpp  image.hpp  integrator.hpp  light.hpp  node.hpp  object.hpp  parser.hpp  pool.hpp  quad.hpp  rand.hpp  ray.hpp  raytracer.cpp  row.hpp  scene.hpp  sphere.hpp  trace.hpp  triangle.hpp  tstack.hpp  values.hpp
src/parser/: common.hpp  geometry.hpp  lights.hpp  materials.hpp  transform.hpp
